--- a/week02.adoc
+++ b/week02.adoc
@@ -34,3 +34,7 @@ Examples:
 * Particle moving in a circle. link:Labs/circle.cpp.txt[AniTk]/link:Labs/circle.pde.txt[Processing]/link:circle.cs.txt[Unity]
 * Particle with velocity. link:Labs/particle.cpp.txt[AniTk]/link:Labs/particle.pde.txt[Processing]/link:Labs/particle.cs.txt[Unity]
 
+
+Further reading:
+
+* Lengyel: Chapter 2, 3.1, Appendix B.1, B.2, B.3, B.6, B.6
