update office hours

--- a/index.adoc
+++ b/index.adoc
@@ -39,8 +39,7 @@ Optional Texts (available at the library):
 
 | Lecture | Park 336 (and Zoom (Link posted on Slack)) | Tuesday, Thursday, 12:55am-2:15pm EST
 | Lab | Park 230 | Thursday, 2:25pm - 3:45pm EST
-| Office Hours | Park 204 | Tuesday, 2:25pm - 3:45pm EST or by appointment (See calend.ly link on Slack)
-
+| Professor Office Hours | Science Center (Labs/Atrium/Park 204) | Late afternoon Tues/Weds/Thurs. Check link:https://calendly.com/anormoyle/office-hours[calend.ly] for my availability. No appointment necessary unless you would to talk privately. 
 |===
 
 
