--- a/asst02-interpolation.adoc
+++ b/asst02-interpolation.adoc
@@ -4,28 +4,19 @@ include::header.adoc[]
 :Author Initials: ASN
 :Date:    2020-02-07
 :Revision: 0.1
-:Dir: assignments/a2-interp
+:Dir: assignments/a2-interpolation
 :stem: latexmath
 
 = {title}
 
 _In which, we implement animations based on interpolation_
 
-This assignment has *two parts!*
-
-**Written part: Due Thursday, September 16th, in lab (~30 min worksheet)**
-
-**Implementation part: Due Friday, September 24th, before midnight**
+**Due Friday, September 24th, before midnight**
 
 The goals of this lab are to
 
-* understand derivations based On Bezier curves
 * implement animations using linear interpolation
 * implement animations using cubic interpolation
-
-The written part is link:asst02-interpolation-written.html[here] and 
-was given out in class as a handout. Please print the handout and write your answers 
-inline.
 
 = Get the source
 
@@ -47,7 +38,7 @@ Then update the source on your local machine and rebuild.
 A color gradient uses linear interpolation to gradually change from one color to another 
 based on position. 
 
-For this question, modify the code in *a2-interp/gradient.cpp* to implement a 2D gradient. 
+For this question, modify the code in *a2-interpolation/gradient.cpp* to implement a 2D gradient. 
 Your program should open a square window and draw NxN cubes to fill it. The color of each 
 cube will be a function of four colors and the cube's position. The four colors will correspond 
 to the four corners of the screen: NE, SE, SW, NW. 
@@ -91,7 +82,7 @@ image::Labs/colorLerp3.png[]
 
 = Draw Cubic
 
-In the file *a2-interp/drawcurve.cpp*, implement an application that draws a cubic curve 
+In the file *a2-interpolation/drawcurve.cpp*, implement an application that draws a cubic curve 
 (and its control points) using both Bernstein polynomials and De Casteljau's algorithm. 
 
 This application should hard-code the following control points:
@@ -126,7 +117,7 @@ image::Labs/drawCubic.png[]
 
 = Cubic motion
 
-Implement a demo, *a2-interp/particlecubic.cpp*, that 
+Implement a demo, *a2-interpolation/particlecubic.cpp*, that 
 animates the position of a particle based on a cubic polynomial. 
 
 To run your program from the */build* directory, type 
@@ -145,11 +136,9 @@ Requirements:
 
 = Screensaver
 
-In class, we talked about how we can animate a curve by animating the 
-control points. In this demo, we will compute a series of random curves and 
-use linear interpolation between the control points to blend from one 
-curve to the next. 
+In class, we talked about how we can animate a curve by animating the control points. In this demo, we will compute a series of random curves and use linear interpolation between the control points to blend from one curve to the next. 
 
+Implement your screensaver program in *a2-interpolation/screensaver.cpp*.
 To run your program from the */build* directory, type 
 
 [source]
@@ -225,7 +214,7 @@ Requirements:
 
 = Be Unique!
 
-Create a unique animation of your own choosing. Below are some ideas:
+Implement your own unique animation in *a2-interpolation/unique.cpp*. Below are some ideas:
 
 * Derive and implement a degree-N curve, N > 3
 * Derive and implement different polynomials for interpolation, such as the ones link:https://easings.net/en[here]. Or create your own. 
