--- a/week03-lab-interpolation.adoc
+++ b/week03-lab-interpolation.adoc
@@ -1,6 +1,6 @@
 include::header.adoc[]
 
-:title: Assignment 02: Written Questions
+:title: Understanding derivations based on Bezier curves
 :Author Initials: ASN
 :Date:    2020-02-07
 :Revision: 0.1
@@ -11,7 +11,9 @@ include::header.adoc[]
 [discrete]
 = Name: 
 
-*Due September 23rd, in class*
+*Due September 16th, in lab*
+
+This worksheet is intended as a short 30 min exercise to be done in groups of 2-3 people.
 
 [discrete]
 = Degree-2 Bezier Curve
