--- a/week03.adoc
+++ b/week03.adoc
@@ -9,9 +9,19 @@ include::header.adoc[]
 
 Lecture Topics:
 
-* Read: TODO (Parent book) 
+* Linear interpolation
+* Cubic Interpolation: Bezier curves, Bernstein polynomials, de Casteljau's algorithm
+
+link:https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=9669311e-4b74-4528-818a-ada301577df5[Lecture 9/14/2021],link:Notes/Lecture05-9.14.2021.pdf[Notes]
+link:https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=00208c9d-e2c9-4eb1-bbfd-ada600ccaa3b[Lecture 9/16/2021],link:Notes/Lecture06-9.16.2021.pdf[Notes]
+
+* Read: Parent Sections 3.1, 3.2. B5
 * Additional references: Lengyel: 11.3
-* Linear interpolation link:Labs/colorLerp1.cpp.txt[colorLerp1]/link:Labs/colorLerp2.cpp.txt[colorLerp2]/link:Labs/particleLerp.cpp.txt[particleLerp]
+
+Additional Resources and demos:
+
+* Interpolating color: link:https://github.com/alinen/animation-toolkit/blob/main/classexamples/week02-colorLerp.cpp[Demo]
 * link:Labs/bezier.svg[Inkscape bezier curve] (open file in Inkscape to play with it)
 * de Casteljau's algorithm: link:Labs/deCasteljau.gif[Demo 1]/link:Labs/deCasteljau-curlyQ.gif[Demo 2]
-* TODO: Other interpolation types
+* link:https://www.cs.brynmawr.edu/~alinen/lab-website/cs110/notes/week02.html#_snake[Snake implemented with Processing]
+* link:https://www.cs.brynmawr.edu/~alinen/lab-website/cs110/notes/week03.html#_interactive_heart_demo["Heart" demo with Processing]
